--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"react-scripts": "5.0.1",
 		"react-scroll": "^1.9.0",
 		"react-slick": "^0.30.2",
+		"react-toastify": "^11.0.5",
 		"slick-carousel": "^1.8.1",
 		"swiper": "^11.1.9",
 		"typescript": "^4.9.5",
